2011-03-09  Peter Kasting  <pkasting@google.com>

        Reviewed by Ryosuke Niwa.

        Add UA string tags for Windows 64.
        https://bugs.webkit.org/show_bug.cgi?id=55226

        * StringsNotToBeLocalized.txt:
        * platform/win/SystemInfo.cpp:
        (WebCore::osVersionForUAString):
        (WebCore::isWOW64):
        (WebCore::processorArchitecture):
        (WebCore::architectureTokenForUAString):
        (WebCore::windowsVersionForUAString):

2011-03-09  Peter Kasting  <pkasting@google.com>

        Unreviewed, attempted build fix.

        * WebCore.pri: Try to update include path for Qt Windows build.

2011-03-09  Peter Kasting  <pkasting@google.com>

        Unreviewed, build fix.

        * platform/win/SystemInfo.cpp:
        (WebCore::windowsVersionForUAString): Fix const conversion warning on Qt.

2011-03-09  Peter Kasting  <pkasting@google.com>

        Reviewed by Mihai Parparita.

        Unify Windows version checks.
        https://bugs.webkit.org/show_bug.cgi?id=55979

        * GNUmakefile.am: Fix spaces -> tabs.
        * StringsNotToBeLocalized.txt:
        * WebCore.pro: Add SystemInfo.* to Qt build.
        * platform/chromium/ScrollbarThemeChromiumWin.cpp:
        (WebCore::ScrollbarThemeChromiumWin::invalidateOnMouseEnterExit):
        (WebCore::ScrollbarThemeChromiumWin::getThemeState):
        (WebCore::ScrollbarThemeChromiumWin::getThemeArrowState):
        * platform/graphics/chromium/GlyphPageTreeNodeChromiumWin.cpp:
        (WebCore::fillBMPGlyphs):
        * platform/win/CursorWin.cpp:
        (WebCore::createSharedCursor):
        * platform/win/ScrollbarThemeWin.cpp:
        (WebCore::ScrollbarThemeWin::ScrollbarThemeWin):
        * platform/win/SystemInfo.cpp: Add full-fledged version check and UA string helper function.
        (WebCore::windowsVersion):
        (WebCore::windowsVersionForUAString):
        * platform/win/SystemInfo.h: Add full-fledged version check and UA string helper function.