@@ -185,6 +185,7 @@
 "GCS_COMPATTR"
 "GEN_DOMObject"
 "GET"
+"GetNativeSystemInfo"
 "GroupName"
 "HIDictionaryWindowShow"
 "HTTP "
@@ -231,6 +232,7 @@
 "InsertNewline"
 "InsertTab"
 "Intel"
+"IsWow64Process"
 "JSDOMWindowShell"
 "JavaScript"
 "JavaScriptFreeSize"
